# GhciOnline

./: .gitignore  GHCiOnline.cabal  LICENSE  Makefile  Procfile  README.md  TODO.md  init.sh  prod.env
src/: GHCiManager.hs  GHCiParser.hs  Main.hs  Sessions.hs  SnapVersion.hs  State.hs  Timeout.hs  WarpVersion.hs
src/CJail/System/: Process.hs
static/: ghci.css  ghci.js  index.html  index2.html  jquery.console.js  main.js  main2.js  main3.js  style.css  style2.css  sunburst.css  sunlight-all-min.js  sunlight-min.js  test.html
static/lang/: sunlight.javascript-min.js  sunlight.objective-c-min.js  sunlight.scala-min.js  sunlight.xml-min.js
static/prettify/: desert.css
systemd/: cjail.service  ghci-online.service  ghcio.service
